# knexus

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: README.md  build-wheels.yml  ci.yml
api-src/: log.cpp  nxs_api.cpp
cmake/: FindCPUINFO.cmake
device_lib/: tenstorrent-npu-blackhole.json  tenstorrent-npu-wormhole.json
docs/: APIs.md  Build_and_CI.md  Core_API.md  JSON_API.md  Logging.md  Plugin_API.md  Python_API.md  Quick_Start.md
include/: knexus-api.h  knexus.h
include/knexus/: api.h  buffer.h  command.h  device.h  device_db.h  event.h  info.h  kernel.h  library.h  log.h  log_manager.h  (+7 more)
include/knexus-api/: _nxs_functions.h  _nxs_propertys.h  nxs.h  nxs_functions.h  nxs_log.h  nxs_platform.h  nxs_propertys.h  nxs_version.h
plugins/: CMakeLists.txt
plugins/cpu/: cpu_command.h  cpu_runtime.cpp
plugins/cuda/: cuda_runtime.cpp  cuda_utils.h
plugins/hip/: hip_runtime.cpp
plugins/include/: rt_buffer.h  rt_object.h  rt_pool.h  rt_runtime.h  rt_utilities.h
plugins/metal/: metal_runtime.cpp
plugins/tenstorrent/: README.md  tenstorrent.h  tt_buffer.cpp  tt_buffer.h  tt_command.cpp  tt_command.h  tt_device.h  tt_library.cpp  tt_library.h  tt_runtime.cpp  tt_runtime.h  tt_schedule.cpp  tt_schedule.h
scripts/: build.sh  test_packaging.sh
src/: CMakeLists.txt  _buffer_impl.h  _device_impl.h  _info_impl.h  _kernel_impl.h  _library_impl.h  _runtime_impl.h  _schedule_impl.h  _system_impl.h  buffer.cpp  command.cpp  device.cpp  device_db.cpp  event.cpp  info.cpp  kernel.cpp  library.cpp  runtime.cpp  schedule.cpp  stream.cpp  system.cpp  utility.cpp
test/: CMakeLists.txt  prop_test.cpp
(+36 files in other folders)
